scroll and design

--- a/src/assets/settings.scss
+++ b/src/assets/settings.scss
@@ -15,8 +15,9 @@
 }
 
 body {
-    background-color: rgb(236, 104, 126);
-    color: rgb(179, 238, 91);
+    background-color: rgb(255, 221, 227);
+    color: rgb(65, 116, 255);
+    min-width: 320px;
 }
 
 .container-flex {
