--- a/src/assets/settings.scss
+++ b/src/assets/settings.scss
@@ -20,9 +20,14 @@ body {
     min-width: 320px;
 }
 
+.container {
+    width: 1140px;
+}
+
 .container-flex {
     display: flex;
     align-items: center;
     flex-direction: column;
     justify-content: center;
+    min-height: 100vh
 }
