output a few items from json

--- a/src/assets/settings.scss
+++ b/src/assets/settings.scss
@@ -14,10 +14,21 @@
     box-sizing: border-box;
 }
 
+@media screen and (max-width: 575px) {
+    #app {
+      display: block;
+    }
+  }
+
 body {
     background-color: rgb(255, 221, 227);
     color: rgb(65, 116, 255);
     min-width: 320px;
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+    margin: 0;
+
 }
 
 .container {
@@ -31,3 +42,13 @@ body {
     justify-content: center;
     min-height: 100vh
 }
+
+.style-poster {
+        border-radius: 5px;
+        top: 0;
+        bottom: 0;
+        // position: relative;
+        width: 140px;
+        min-width: 140px;
+        height: auto;
+      }
